Added community barplot figure.

--- a/submission/header.tex
+++ b/submission/header.tex
@@ -14,7 +14,7 @@
 \usepackage{indentfirst}
 
 \usepackage[labelsep=period, labelfont=bf]{caption}
-\renewcommand{\thefigure}{S\arabic{figure}}
+\renewcommand{\thefigure}{\arabic{figure}}
 \captionsetup{justification=raggedright,singlelinecheck=false}
 
 \usepackage{pdflscape}
