--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -644,7 +644,7 @@ Syntax.
 
 }
 
-\caption{Bacteril Community\label{community}}\label{fig:unnamed-chunk-2}
+\caption{Taxonomic classification and relative contribution of the most abundant bacterial sequences on the surfaces of two marine macrophytes (\textit{Cymodocea nodosa} and \textit{Caulerpa cylindracea}) from two locations (Saline and Funtana) and in two contrasting seasons (4 December 2017 and 19 June 2018).\label{community}}\label{fig:unnamed-chunk-2}
 \end{figure}
 
 
