--- a/submission/header.tex
+++ b/submission/header.tex
@@ -24,3 +24,6 @@
 \usepackage{siunitx}
 \DeclareSIUnit\molar{\mole\per\cubic\deci\metre}
 \DeclareSIUnit\Molar{\textsc{m}}
+
+\usepackage{caption}
+\captionsetup{justification=justified}
