--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -109,6 +109,9 @@ Surfaces}}
 \DeclareSIUnit\molar{\mole\per\cubic\deci\metre}
 \DeclareSIUnit\Molar{\textsc{m}}
 
+\usepackage{caption}
+\captionsetup{justification=justified}
+
 \begin{document}
 \maketitle
 
