--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -387,18 +387,18 @@ The final filtrate containing digested proteins was acidified with 1
 to the Vienna Metabolomics Center (University of Vienna) for
 metaproteomic analysis. Peptides were resuspended in 1 \si{\percent}
 (final concentration) trifluoroacetic acid, desalted using the Pierce
-C18 Tips (Thermo Fisher Scientific, USA) accorind to the manufacturer's
+C18 Tips (Thermo Fisher Scientific, USA) according to the manufacturer's
 instructions and sequenced on a Q Exactive Hybrid Quadrupole-Orbitrap
-Mass Spectrometer (Thermo Fisher Scientific, USA). Obtaied MS/MS spectra
-were searched against a protein database from metagenomic assembly
-published in Burke \emph{et al.} (2011a) using SEQUEST-HIT engines and
-validated with Percolator in Proteome Discoverer 2.1 (Thermo Fisher
-Scientific, USA). The target-decoy approach was used to reduce the
-probability of false peptide identification. Results \SI{< 1}{\percent}
-false discovery rate at the peptide level were kept. For protein
-identification a minimum of of two peptides and one unique peptide were
-required. For protein quantification, a chromatographic peak area-based
-free quantitative method was applied.
+Mass Spectrometer (Thermo Fisher Scientific, USA). Obtained MS/MS
+spectra were searched against a protein database from metagenomic
+assembly published in Burke \emph{et al.} (2011a) using SEQUEST-HIT
+engines and validated with Percolator in Proteome Discoverer 2.1 (Thermo
+Fisher Scientific, USA). The target-decoy approach was used to reduce
+the probability of false peptide identification. Results whose false
+discovery rate at the peptide level was \SI{< 1}{\percent} were kept.
+For protein identification a minimum of of two peptides and one unique
+peptide were required. For protein quantification, a chromatographic
+peak area-based free quantitative method was applied.
 
 \subsubsection{Confocal Microscopy}\label{confocal-microscopy}
 
